--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -56,7 +56,7 @@
             <dt><i class="Hui-iconfont">&#xe62d;</i> 分类管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="admin-role.html" data-title="角色管理" href="javascript:void(0)">角色管理</a></li>
+                    <li><a data-href="/admin/cates/index" data-title="分类列表" href="javascript:void(0)">分类列表</a></li>
                 </ul>
             </dd>
         </dl>
