--- a/application/index/view/member/zhizuo.html
+++ b/application/index/view/member/zhizuo.html
@@ -47,6 +47,7 @@
     <div class="btns" {neq name="product.status" value="0"} style="display: none;" {/neq}>
         <!--<a href="javascript:void(0);" id="save-video">保存</a>-->
         <!--<a href="javascript:void(0);" id="pre-video">生成预览</a>-->
+        <span style="color: #FFFFFF;margin-left: 20px;">视频名称</span><input style="margin-left: 10px" type="text" id="vedio_name">
         <span style="color: #FFFFFF;margin-left: 20px;">输入激活码</span><input style="margin-left: 10px" type="text" id="code">
         <a href="javascript:void(0);" id="make-video">生成成片</a>
     </div>
