--- a/application/index/view/index/cates.html
+++ b/application/index/view/index/cates.html
@@ -341,23 +341,7 @@
             </ul>
         </div>
     </div>
-    <div class="pages" style="display: none">
-        <ul class="pagination">
-            <li class="disabled"><span>&laquo;</span></li>
-            <li class="active"><span>1</span></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=2">2</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=3">3</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=4">4</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=5">5</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=6">6</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=7">7</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=8">8</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=9">9</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=10">10</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=11">11</a></li>
-            <li><a href="/home/home/all_works/3.html?cate=3&amp;page=2">&raquo;</a></li>
-        </ul>
-    </div>
+    {$list->render()}
 </div>
 <div class="right-nav">
     <a href="http://wpa.qq.com/msgrd?v=3&uin=2850203311&site=qq&menu=yes" target="_blank" title="联系客服">
