--- a/application/admin/view/member/member_edit.html
+++ b/application/admin/view/member/member_edit.html
@@ -4,38 +4,38 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>用户名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="username" name="username">
+				<input type="text" class="input-text" value="{$info.name}" placeholder="" id="username" name="username">
 			</div>
 		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>密码：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="password" class="input-text" value="" placeholder="" id="password" name="password">
-			</div>
-		</div>
+		<!--<div class="row cl">-->
+			<!--<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>密码：</label>-->
+			<!--<div class="formControls col-xs-8 col-sm-9">-->
+				<!--<input type="password" class="input-text" value="" placeholder="" id="password" name="password">-->
+			<!--</div>-->
+		<!--</div>-->
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="mobile" name="mobile">
+				<input type="text" class="input-text" value="{$info.telphone}" placeholder="" id="mobile" name="mobile">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>类型：</label>
 			<div class="formControls col-xs-8 col-sm-9 skin-minimal">
 				<div class="radio-box">
-					<input name="level" type="radio" id="level-1" value="0" checked>
+					<input name="level" type="radio" id="level-1" value="0" {eq name="$info.level" value="0"} checked {/eq}>
 					<label for="sex-1">个人</label>
 				</div>
 				<div class="radio-box">
-					<input type="radio" id="level-2" name="level" value="1">
+					<input type="radio" id="level-2" name="level" value="1" {eq name="$info.level" value="1"} checked {/eq}>
 					<label for="sex-2">影楼</label>
 				</div>
 				<div class="radio-box">
-					<input type="radio" id="level-3" name="level" value="2">
+					<input type="radio" id="level-3" name="level" value="2" {eq name="$info.level" value="2"} checked {/eq}>
 					<label for="sex-3">代理商</label>
 				</div>
 				<div class="radio-box">
-					<input type="radio" id="level-4" name="level" value="2">
+					<input type="radio" id="level-4" name="level" value="3" {eq name="$info.level" value="3"} checked {/eq}>
 					<label for="sex-3">淘宝代理</label>
 				</div>
 			</div>
@@ -43,31 +43,31 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3">开通时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss',})" id="datemin" name="kt_time" class="input-text Wdate">
+				<input type="text" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss',})" id="datemin" name="kt_time" class="input-text Wdate" value="{$info.kt_time|time_format}">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3">到期时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss',})" id="datemax" name="dq_time" class="input-text Wdate">
+				<input type="text" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss',})" id="datemax" name="dq_time" class="input-text Wdate" value="{$info.dq_time|time_format}">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3">开通业务员：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" placeholder="" name="add_user" id="add_user">
+				<input type="text" class="input-text" placeholder="" name="add_user" id="add_user" value="{$info.add_user}">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3">企业名称：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" placeholder="" name="com_name" id="com_name">
+				<input type="text" class="input-text" placeholder="" name="com_name" id="com_name" value="{$info.com_name}">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3">邮箱：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" placeholder="@" name="email" id="email">
+				<input type="text" class="input-text" placeholder="@" name="email" id="email" value="{$info.email}">
 			</div>
 		</div>
 		<!--<div class="row cl">-->
@@ -98,6 +98,7 @@
 		<!--</div>-->
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
+				<input type="hidden" value="{$info.id}" name="id">
 				<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
 			</div>
 		</div>
@@ -146,7 +147,7 @@
             submitHandler:function(form){
                 $(form).ajaxSubmit({
                     type:'post',
-                    url:'/admin/member/add',
+                    url:'/admin/member/update',
                     dataType:'json',
                     async:false,
                     success:function (data) {
