--- a/application/admin/view/member/member_list.html
+++ b/application/admin/view/member/member_list.html
@@ -9,11 +9,14 @@
 			<tr class="text-c">
 				<th width="25"><input type="checkbox" name="" value=""></th>
 				<th width="80">ID</th>
-				<th width="100">用户名</th>
-				<th width="40">性别</th>
+				<th width="100">登录名</th>
+				<th width="40">级别</th>
 				<th width="90">手机</th>
-				<th width="150">邮箱</th>
-				<th width="130">加入时间</th>
+				<!--<th width="150">邮箱</th>-->
+				<th width="130">开通时间</th>
+				<th width="130">到期时间</th>
+				<th width="130">开通业务员</th>
+				<th width="90">企业</th>
 				<th width="70">状态</th>
 				<th width="100">操作</th>
 			</tr>
@@ -23,15 +26,17 @@
 			<tr class="text-c">
 				<td><input type="checkbox" value="1" name=""></td>
 				<td>{$vo.id}</td>
-				<td><u style="cursor:pointer" class="text-primary" onclick="member_show('张三','member-show.html','10001','360','400')">{$vo.name}</u></td>
-				<td>{if condition="$vo.sex eq 0"}男{elseif condition="$vo.sex eq 1"/}女{else/}保密{/if}</td>
+				<td>{$vo.name}</td>
+				<td>{if condition="$vo.level eq 0"}个人{elseif condition="$vo.level eq 1"/}影楼{elseif condition="$vo.level eq 2"}代理商{elseif condition="$vo.level eq 3"}淘宝{/if}</td>
 				<td>{$vo.telphone}</td>
-				<td>{$vo.email}</td>
-				<td>{$vo.create_time|time_format}</td>
+				<td>{$vo.kt_time|time_format}</td>
+				<td>{$vo.dq_time|time_format}</td>
+				<td>{$vo.add_user}</td>
+				<td>{$vo.com_name}</td>
 				<td class="td-status">{if condition="$vo.status eq 1"}<span class="label label-success radius">已启用</span>{else/}<span class="label label-defaunt radius">已停用</span>{/if}</td>
 				<td class="td-manage">
 					{if condition="$vo.status eq 1"}<a style="text-decoration:none" onClick="member_stop(this,{$vo.id})" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>{else/}<a style="text-decoration:none" onClick="member_start(this,{$vo.id})" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>{/if}
-					<!--<a title="编辑" href="javascript:;" onclick="member_edit('编辑','member-add.html','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>-->
+					<a title="编辑" href="javascript:;" onclick="member_edit('编辑','/admin/member/memberEdit/id/{$vo.id}','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" onClick="change_password('修改密码','change_password.html',{$vo.id},'600','270')" href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a>
 					<a title="删除" href="javascript:;" onclick="member_del(this,{$vo.id})" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
 				</td>
@@ -54,17 +59,13 @@ $(function(){
 		"bStateSave": true,//状态保存
 		"aoColumnDefs": [
 		  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-		  {"orderable":false,"aTargets":[0,7,8]}// 制定列不参与排序
+		  {"orderable":false,"aTargets":[]}// 制定列不参与排序
 		]
 	});
 	
 });
 /*用户-添加*/
 function member_add(title,url,w,h){
-	layer_show(title,url,w,h);
-}
-/*用户-查看*/
-function member_show(title,url,id,w,h){
 	layer_show(title,url,w,h);
 }
 /*用户-停用*/
@@ -77,7 +78,7 @@ function member_stop(obj,id){
 			data:{"id":id,"is_done":'1'},
 			success: function(data){
 			    if(data.status){
-                    $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_start(this,'+id+')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
+                    $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_edit(this,'+id+')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
                     $(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已停用</span>');
                     $(obj).remove();
                     layer.msg('已停用!',{icon: 5,time:1000});
@@ -121,7 +122,7 @@ function member_start(obj,id){
 	});
 }
 /*用户-编辑*/
-function member_edit(title,url,id,w,h){
+function member_edit(title,url,w,h){
 	layer_show(title,url,w,h);
 }
 /*密码-修改*/
