--- a/application/index/view/common/lists.html
+++ b/application/index/view/common/lists.html
@@ -33,9 +33,9 @@
                         <li>
                             <a href="/index/member/index">我的作品</a>
                         </li>
-                        <!--<li>-->
-                        <!--<a href="/member/profile.html">账户管理</a>-->
-                        <!--</li>-->
+                        <li>
+                        <a href="/index/">营销设置</a>
+                        </li>
                         <!--<li>
                             <a href="/store.html">礼品商城</a>
                         </li>-->
